--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             
             <div id='displayContent'>
                 <div class="range">
-                    <input type="range" min="1" max="3" steps="1" value="1" id='cycleSlider'>
+                    <input type="range" min="1" max="3" steps="1" value="1" id='cycleSlider'
+                    class='slider'>
                   </div>
                 <button id='continueButton'>Continue</button>
             </div>
