--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             </div>
             
             <div id='displayContent'>
-                <div class="range">
-                    <input type="range" min="1" max="3" steps="1" value="1" id='cycleSlider'
-                    class='slider'>
+                
+                <div class="range-wrap" style="width: 55%;">
+                    <input type="range" id='cycleSlider' class="range" min="1" max='3'>
+                    <output class="bubble"></output>
                   </div>
+
                 <button id='continueButton'>Continue</button>
             </div>
         </div> 
