--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                     <input type="range" id='cycleSlider' class="range" min="1" max='3'>
                     <output class="bubble"></output>
                   </div>
-
+                
                 <button id='continueButton'>Continue</button>
+                </div>
             </div>
         </div> 
     </div>
