--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Pomodoro Counter!</h1>
+        <h1>Pomodoro Counter</h1>
         <div id="display">
             <div id="displayTitle">
                 <h2>Choose a cycle size:</h2>
