additional styling added. Refactored some code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h2>Choose a cycle size:</h2>
             </div>
             
-            <div id='displayContent'>
+            <div id='displayContent' style="border:1px black solid;">
                 
                 <div class="range-wrap" style="width: 55%;">
                     <input type="range" id='cycleSlider' class="range" min="1" max='3'>
